mysql-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: banorte
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: mysql
      containers:
        - name: mysql
          image: mysql:5.7.34
          securityContext:
            privileged: true
          ports:
            - containerPort: 3033
              name: client
