mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: banorte
spec:
  clusterIP: None
  ports:
  - port: 3033
  selector:
    app: mysql
