service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-sample
  name: app-sample
  namespace: banorte
spec:
  clusterIP: None
  ports:
  - port: 9080
  selector:
    app: app-sample
